2009-08-14  Matevz Tadel  <matevz.tadel@ijs.si>

	Add support for handling of some terminal signals (ILL, BUS, SEGV
	and FPE) in Eventor/Mountain threads.

	For FPE only trap on FE_DIVBYZERO | FE_INVALID | FE_OVERFLOW.

	This will require another pass to work on mac.

	* Ephra/Mountain.cxx:
	Use special class MountainThread : public GThread for running
	Eventors. MountainThread has additional members for signal
	handling.

	In DancerBeat() initialize signal handler as requested by Eventor
	flags.

	If signal is caught, notifiy Eventor via OnTerminalSignal() and
	terminate the thread.

	* Glasses/Eventor.cxx:
	* Glasses/Eventor.h:
	Add flags for specifying which signals to handle during execution:
	  Bool_t bTrapILL, bTrapBUS, bTrapFPE, bTrapSEGV;
	All disabled by default, use SetTrapAll() to enable all.

	Add virtual member function:
	  void OnTerminalSignal(Operator::Arg* op_arg, Int_t sid);
	that is called when one of the above signals is caught.

2009-07-14  Matevz Tadel  <matevz.tadel@ijs.si>

	Draw box so that shaders get correct vertex positions.

	* Rnr/GL/Box_GL_Rnr.cxx:
	Properly place corner vertices at coordinates as given by the mA,
	mB and mC size variables (scaling was used before).

2009-07-09  Matevz Tadel  <matevz.tadel@ijs.si>

	Changes required to support shaders.

	* Pupils/Pupil.cxx:
	* Pupils/Pupil.h:
	Initialize GLEW from Pupil::draw(), not from the context-holder
	window.

	* Rnr/GL/ZGlass_GL_Rnr.cxx:
	* Rnr/GL/ZGlass_GL_Rnr.h:
	Add function 'bool check_gl_error(const TString& msg)'.

	* macros/gl_defines.h:
	Add tokens for GL 1.4 and 1.5.
	Add selected tokens for GL 2.0.

2009-06-27  Matevz Tadel  <matevz.tadel@ijs.si>

	Rewrite socket selector handling.
	Due to changes is TSocket the file descriptor is not available
	after the other side has closed a connection.

	* Gled/GSelector.cxx:
	* Gled/GSelector.h:
	Reverse key-value roles in map that stores file descriptor to
	user-data (socket pointer) correspondence.